package ar.edu.davinci.domain;

public class Classic extends Membresia {

}
