package ar.edu.davinci.domain;

public class Economic extends Membresia {

}
