package ar.edu.davinci.domain;

public abstract class Membresia {

	private Integer contadorRemolques;
	private Boolean tieneRemolques;
	private Integer contadorReparaciones;
	private Boolean tieneReparaciones;
}
