package ar.edu.davinci.domain;

public class Platinum extends Membresia {

}
