package ar.edu.davinci.domain.clases;

public class MiniGrua extends CamionAuxilio {

	public MiniGrua(Ubicacion ubicacion, String patente) {
		super(ubicacion, patente);
	}

	
}
