package ar.edu.davinci.domain.clases;

public class MiniTallerMovil extends CamionAuxilio {

	public MiniTallerMovil(Ubicacion ubicacion, String patente) {
		super(ubicacion,patente);
	}

}
