package ar.edu.davinci.domain.interfaces;

public interface ModuloPagos {

	public static void tieneMora() {
		
	}
}
